配置文件中新增占位符修改、消息类型的设定

--- a/config/config.json
+++ b/config/config.json
@@ -5,6 +5,12 @@
     "template": "##### 每日推送。![核心图表]({IMAGE_URL})",
     "title": "每日推送",
     "at_mobiles": [],
-    "is_at_all": false
+    "is_at_all": false,
+
+    "send_type": "markdown_with_image",
+
+    "placeholders": [
+      "{IMAGE_URL}"
+    ]
   }
 ]
